package com.example.tleilax.model;

public class Storage {
}
